frontend/nodejs-react-ssr/nodejs-react-ssr-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nodejs-react-ssr
  labels:
    app: nodejs-react-ssr
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodejs-react-ssr
      tier: frontend
  template:
    metadata:
      labels:
        app: nodejs-react-ssr
        tier: frontend
    spec:
      containers:
        - name: nodejs-react-ssr
          image: ngoyarzo/nodejs-react-ssr:dev.latest
          ports:
            - containerPort: 5173
          command: ["node", "server.js"]
